--- a/frontend/angular/src/app/session/signup/signup.component.scss
+++ b/frontend/angular/src/app/session/signup/signup.component.scss
@@ -1,5 +1,5 @@
 .session-content {
-  background-image: url(../../../assets/images/walpaper.jpg);
+  //background-image: url(../../../assets/images/walpaper.jpg);
   height: 100%;
   background-position: center;
   background-repeat: no-repeat;
