--- a/frontend/angular/src/app/session/simulacao/simulacao.component.html
+++ b/frontend/angular/src/app/session/simulacao/simulacao.component.html
@@ -45,6 +45,15 @@
                     <small *ngIf="formSimulacao.controls['numeroPrestacoesRestantes'].hasError('required') && formSimulacao.controls['numeroPrestacoesRestantes'].touched"
                            class="mat-text-warn">Campo obrigatório.</small>
                 </div>
+                <div class="pb-1">
+                    <mat-checkbox class="example-margin"
+                                  [checked]="parcelaFixa"
+                              (click)="changeParcela()">Parcela fixa</mat-checkbox>
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    <mat-checkbox class="example-margin"
+                                  [checked]="parcelaVariavel"
+                                  (click)="changeParcela()">Parcela variável</mat-checkbox>
+                </div>
               <button mat-raised-button color="primary" type="submit" [disabled]="!formSimulacao.valid">Simular</button>
             </div>
           </form>
