--- a/frontend/angular/src/app/session/simulacao/simulacao.component.html
+++ b/frontend/angular/src/app/session/simulacao/simulacao.component.html
@@ -8,7 +8,7 @@
               <div class="pb-1">
                 <mat-form-field style="width: 100%">
                   <input matInput
-                         placeholder="Valor total do cŕedito financiado"
+                         placeholder="Valor total do crédito financiado"
                          mask="0*"
                          [formControl]="formSimulacao.controls['valorCreditoFinanciado']">
                 </mat-form-field>
