--- a/frontend/angular/src/app/session/simulacao/simulacao.component.html
+++ b/frontend/angular/src/app/session/simulacao/simulacao.component.html
@@ -1,4 +1,4 @@
-<div class="session mat-indigo">
+<div *ngIf='dadosIniciaisSimulacao' class="session mat-indigo">
   <div class="session-content">
     <div class="session-wrapper">
       <mat-card>
@@ -7,40 +7,36 @@
             <div fxLayout="column" fxLayoutAlign="space-around">
               <div class="pb-1">
                 <mat-form-field style="width: 100%">
-                  <input matInput
-                         placeholder="Valor total do crédito financiado"
-                         mask="0*"
-                         [formControl]="formSimulacao.controls['valorCreditoFinanciado']">
+                    <input matInput autofocus type="number" name="in"
+                           [formControl]="formSimulacao.controls['valorCreditoFinanciado']"
+                           placeholder="Valor total do crédito financiado" min="1" step="0.01"/>
                 </mat-form-field>
                 <small *ngIf="formSimulacao.controls['valorCreditoFinanciado'].hasError('required') && formSimulacao.controls['valorCreditoFinanciado'].touched"
                        class="mat-text-warn">Campo obrigatório.</small>
               </div>
               <div class="pb-1">
                 <mat-form-field style="width: 100%">
-                  <input matInput
-                         placeholder="Valor da sua parcela atual"
-                         mask="0*"
-                         [formControl]="formSimulacao.controls['valorParcelaAtual']">
+                    <input matInput autofocus type="number" name="in"
+                           [formControl]="formSimulacao.controls['valorParcelaAtual']"
+                           placeholder="Valor da sua parcela atual" min="1" step="0.01"/>
                 </mat-form-field>
                 <small *ngIf="formSimulacao.controls['valorParcelaAtual'].hasError('required') && formSimulacao.controls['valorParcelaAtual'].touched"
                        class="mat-text-warn">Campo obrigatório.</small>
               </div>
                 <div class="pb-1">
                     <mat-form-field style="width: 100%">
-                        <input matInput
-                               placeholder="Número total de prestações"
-                               mask="0*"
-                               [formControl]="formSimulacao.controls['numeroTotalPrestacoes']">
+                        <input matInput autofocus type="number" name="in"
+                               [formControl]="formSimulacao.controls['numeroTotalPrestacoes']"
+                               placeholder="Número total de prestações" min="1" step="1"/>
                     </mat-form-field>
                     <small *ngIf="formSimulacao.controls['numeroTotalPrestacoes'].hasError('required') && formSimulacao.controls['numeroTotalPrestacoes'].touched"
                            class="mat-text-warn">Campo obrigatório.</small>
                 </div>
                 <div class="pb-1">
                     <mat-form-field style="width: 100%">
-                        <input matInput
-                               placeholder="Número de prestações restantes"
-                               mask="0*"
-                               [formControl]="formSimulacao.controls['numeroPrestacoesRestantes']">
+                        <input matInput autofocus type="number" name="in"
+                               [formControl]="formSimulacao.controls['numeroPrestacoesRestantes']"
+                               placeholder="Número de prestações restantes" min="1" step="1"/>
                     </mat-form-field>
                     <small *ngIf="formSimulacao.controls['numeroPrestacoesRestantes'].hasError('required') && formSimulacao.controls['numeroPrestacoesRestantes'].touched"
                            class="mat-text-warn">Campo obrigatório.</small>
@@ -48,11 +44,11 @@
                 <div class="pb-1">
                     <mat-checkbox class="example-margin"
                                   [checked]="parcelaFixa"
-                              (click)="changeParcela()">Parcela fixa</mat-checkbox>
+                                  (change)="changeParcela()">Parcela fixa</mat-checkbox>
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                     <mat-checkbox class="example-margin"
                                   [checked]="parcelaVariavel"
-                                  (click)="changeParcela()">Parcela variável</mat-checkbox>
+                                  (change)="changeParcela()">Parcela variável</mat-checkbox>
                 </div>
               <button mat-raised-button color="primary" type="submit" [disabled]="!formSimulacao.valid">Simular</button>
             </div>
@@ -62,3 +58,63 @@
     </div>
   </div>
 </div>
+
+
+<div *ngIf='dadosResultadoSimulacao' fxLayout="column">
+    <div fxLayout="row wrap" fxLayoutAlign="center start">
+        <div fxFlex.gt-sm="50" fxFlex.gt-xs="50" fxFlex="100">
+            <mat-card class="card-widget mat-light-white cards">
+                <div mat-card-widget>
+                    <!--                    <div mat-card-float-icon>-->
+                    <!--                        <mat-icon>attach_money</mat-icon>-->
+                    <!--                    </div>-->
+                    <div class="pl-0">
+                        <p>Hoje você paga R${{resultadoSimulacao.actual_value_installment}}</p>
+                    </div>
+                </div>
+            </mat-card>
+        </div>
+        <div fxFlex.gt-sm="50" fxFlex.gt-xs="50" fxFlex="100">
+            <mat-card class="card-widget mat-light-white cards">
+                <div mat-card-widget>
+                    <!--                    <div mat-card-float-icon>-->
+                    <!--                        <mat-icon>attach_money</mat-icon>-->
+                    <!--                    </div>-->
+                    <div class="pl-0">
+                        <p>Hoje sua taxa é de {{resultadoSimulacao.actual_tax}}%</p>
+                    </div>
+                </div>
+            </mat-card>
+        </div>
+        <div fxFlex.gt-sm="50" fxFlex.gt-xs="50" fxFlex="100">
+            <mat-card class="card-widget mat-light-blue cards">
+                <div mat-card-widget>
+                    <!--                    <div mat-card-float-icon>-->
+                    <!--                        <mat-icon>attach_money</mat-icon>-->
+                    <!--                    </div>-->
+                    <div class="pl-0">
+                        <p>Com a portabilidade no Safra você pagará R${{resultadoSimulacao.new_value_installment}}% ao ano</p>
+                    </div>
+                </div>
+            </mat-card>
+        </div>
+        <div fxFlex.gt-sm="50" fxFlex.gt-xs="50" fxFlex="100">
+            <mat-card class="card-widget mat-light-blue cards">
+                <div mat-card-widget>
+                    <!--                    <div mat-card-float-icon>-->
+                    <!--                        <mat-icon>attach_money</mat-icon>-->
+                    <!--                    </div>-->
+                    <div class="pl-0">
+                        <p>Com a portabilidade no Safra sua taxa será {{resultadoSimulacao.new_tax}}% ao ano</p>
+                    </div>
+                </div>
+            </mat-card>
+        </div>
+    </div>
+
+    <div fxFlex.gt-sm="50" fxFlex.gt-xs="50" fxFlex="100">
+        <p>Fazendo a portabilidade você economizará R${{resultadoSimulacao.saved_value}}%</p>
+    </div>
+
+</div>
+
