--- a/frontend/angular/src/app/session/signin/signin.component.scss
+++ b/frontend/angular/src/app/session/signin/signin.component.scss
@@ -10,3 +10,26 @@
   width: 100px;
   height: 100px;
 }
+
+.text-home-style{
+  font-family: 'Roboto','Sans-serife';
+  font-size: 20px;
+  color: #8492A6;
+}
+
+.h1-home-style{
+  font-family: 'Roboto','Sans-serife';
+  font-size: 25px;
+  color: #003A48;
+}
+
+.h2-home-style{
+  font-family: 'Roboto','Sans-serife';
+  font-size: 36px;
+  color: #003A48;
+}
+
+.button-home-style{
+  background-color: #003A48;
+  border-radius: 7,5px;
+}
