Atualizando layout da simulação e incluindo os dados retornados do back

--- a/frontend/angular/src/app/session/simulacao/simulacao.component.scss
+++ b/frontend/angular/src/app/session/simulacao/simulacao.component.scss
@@ -10,3 +10,14 @@
   width: 100px;
   height: 100px;
 }
+
+.text-align-right {
+  text-align: right;
+  display: inline-block;
+  margin-bottom: -10px;
+}
+
+.no-padding {
+  display: inline-block;
+  margin-bottom: -10px;
+}
