--- a/frontend/angular/src/app/session/simulacao/simulacao.component.html
+++ b/frontend/angular/src/app/session/simulacao/simulacao.component.html
@@ -60,61 +60,118 @@
 </div>
 
 
-<div *ngIf='dadosResultadoSimulacao' fxLayout="column">
-    <div fxLayout="row wrap" fxLayoutAlign="center start">
-        <div fxFlex.gt-sm="50" fxFlex.gt-xs="50" fxFlex="100">
-            <mat-card class="card-widget mat-light-white cards">
-                <div mat-card-widget>
-                    <!--                    <div mat-card-float-icon>-->
-                    <!--                        <mat-icon>attach_money</mat-icon>-->
-                    <!--                    </div>-->
-                    <div class="pl-0">
-                        <p>Hoje você paga R${{resultadoSimulacao.actual_value_installment}}</p>
+<div *ngIf='dadosResultadoSimulacao' class="session mat-indigo">
+    <div class="session-content">
+        <div class="session-wrapper">
+            <mat-card>
+                <mat-card-content>
+                    <div fxLayout="column">
+                        <div fxLayout="column" fxLayoutAlign="space-around">
+                            <div class="pb-1">
+                                <div fxLayout="row wrap" fxLayoutAlign="center start">
+                                    <div fxFlex.gt-sm="50" fxFlex.gt-xs="50" fxFlex="100">
+                                        <mat-card class="card-widget mat-light-white cards">
+                                            <div mat-card-widget>
+                                                <!--                    <div mat-card-float-icon>-->
+                                                <!--                        <mat-icon>attach_money</mat-icon>-->
+                                                <!--                    </div>-->
+                                                <div class="pl-0">
+                                                    <p>Hoje você paga<br>R${{resultadoSimulacao.actual_value_installment}}</p>
+                                                </div>
+                                            </div>
+                                        </mat-card>
+                                    </div>
+                                    <div fxFlex.gt-sm="50" fxFlex.gt-xs="50" fxFlex="100">
+                                        <mat-card class="card-widget mat-light-white cards">
+                                            <div mat-card-widget>
+                                                <!--                    <div mat-card-float-icon>-->
+                                                <!--                        <mat-icon>attach_money</mat-icon>-->
+                                                <!--                    </div>-->
+                                                <div class="pl-0">
+                                                    <p>Hoje sua taxa é de<br>{{(resultadoSimulacao.actual_tax*100).toFixed(2)}}%/ano</p>
+                                                </div>
+                                            </div>
+                                        </mat-card>
+                                    </div>
+                                    <div fxFlex.gt-sm="50" fxFlex.gt-xs="50" fxFlex="100">
+                                        <mat-card class="card-widget mat-light-blue cards">
+                                            <div mat-card-widget>
+                                                <!--                    <div mat-card-float-icon>-->
+                                                <!--                        <mat-icon>attach_money</mat-icon>-->
+                                                <!--                    </div>-->
+                                                <div class="pl-0">
+                                                    <p>Com a portabilidade no Safra você pagará R${{resultadoSimulacao.new_value_installment}}</p>
+                                                </div>
+                                            </div>
+                                        </mat-card>
+                                    </div>
+                                    <div fxFlex.gt-sm="50" fxFlex.gt-xs="50" fxFlex="100">
+                                        <mat-card class="card-widget mat-light-blue cards">
+                                            <div mat-card-widget>
+                                                <!--                    <div mat-card-float-icon>-->
+                                                <!--                        <mat-icon>attach_money</mat-icon>-->
+                                                <!--                    </div>-->
+                                                <div class="pl-0">
+                                                    <p>Com a portabilidade no Safra sua taxa será de {{(resultadoSimulacao.new_tax*100).toFixed(2)}}%/ano</p>
+                                                </div>
+                                            </div>
+                                        </mat-card>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="pb-1">
+                                <div fxFlex.gt-sm="100" fxFlex.gt-xs="100" fxFlex="100">
+                                    <p>Fazendo a portabilidade você economizará R$%{{resultadoSimulacao.saved_value}}</p>
+                                </div>
+                            </div>
+                            <button mat-raised-button color="primary" (click)="portabilizar()">Peça agora sua portabilidade</button>
+                            <br>
+                            <div class="pb-1">
+                                <div fxLayout="row wrap" fxLayoutAlign="center start" class="no-padding">
+                                    <div fxFlex.gt-sm="70" fxFlex.gt-xs="70" fxFlex="70" class="no-padding">
+                                        <p>Valor restante a ser portado:</p>
+                                    </div>
+                                    <div fxFlex.gt-sm="30" fxFlex.gt-xs="30" fxFlex="30" class="text-align-right">
+                                        <p>R${{resultadoSimulacao.new_total_value}}</p>
+                                    </div>
+                                    <div fxFlex.gt-sm="70" fxFlex.gt-xs="70" fxFlex="70" class="no-padding">
+                                        <p>Número de parcela restantes:</p>
+                                    </div>
+                                    <div fxFlex.gt-sm="30" fxFlex.gt-xs="30" fxFlex="30" class="text-align-right">
+                                        <p>45</p>
+                                    </div>
+                                    <div fxFlex.gt-sm="70" fxFlex.gt-xs="70" fxFlex="70" class="no-padding">
+                                        <p>Valor da parcela atual:</p>
+                                    </div>
+                                    <div fxFlex.gt-sm="30" fxFlex.gt-xs="30" fxFlex="30" class="text-align-right">
+                                        <p>R${{resultadoSimulacao.actual_value_installment}}</p>
+                                    </div>
+                                    <div fxFlex.gt-sm="70" fxFlex.gt-xs="70" fxFlex="70" class="no-padding">
+                                        <p>Valor da nova parcela:</p>
+                                    </div>
+                                    <div fxFlex.gt-sm="30" fxFlex.gt-xs="30" fxFlex="30" class="text-align-right">
+                                        <p>R${{resultadoSimulacao.new_value_installment}}</p>
+                                    </div>
+                                    <div fxFlex.gt-sm="70" fxFlex.gt-xs="70" fxFlex="70" class="no-padding">
+                                        <p>Valor da nova taxa:</p>
+                                    </div>
+                                    <div fxFlex.gt-sm="30" fxFlex.gt-xs="30" fxFlex="30" class="text-align-right">
+                                        <p>{{(resultadoSimulacao.new_tax*100).toFixed(2)}}% a.a</p>
+                                    </div>
+                                    <div fxFlex.gt-sm="70" fxFlex.gt-xs="70" fxFlex="70" class="no-padding">
+                                        <p>Custo da portabilidade:</p>
+                                    </div>
+                                    <div fxFlex.gt-sm="30" fxFlex.gt-xs="30" fxFlex="30" class="text-align-right">
+                                        <p>R$400,00</p>
+                                    </div>
+
+                                </div>
+                            </div>
+                        </div>
+
                     </div>
-                </div>
-            </mat-card>
-        </div>
-        <div fxFlex.gt-sm="50" fxFlex.gt-xs="50" fxFlex="100">
-            <mat-card class="card-widget mat-light-white cards">
-                <div mat-card-widget>
-                    <!--                    <div mat-card-float-icon>-->
-                    <!--                        <mat-icon>attach_money</mat-icon>-->
-                    <!--                    </div>-->
-                    <div class="pl-0">
-                        <p>Hoje sua taxa é de {{resultadoSimulacao.actual_tax}}%</p>
-                    </div>
-                </div>
-            </mat-card>
-        </div>
-        <div fxFlex.gt-sm="50" fxFlex.gt-xs="50" fxFlex="100">
-            <mat-card class="card-widget mat-light-blue cards">
-                <div mat-card-widget>
-                    <!--                    <div mat-card-float-icon>-->
-                    <!--                        <mat-icon>attach_money</mat-icon>-->
-                    <!--                    </div>-->
-                    <div class="pl-0">
-                        <p>Com a portabilidade no Safra você pagará R${{resultadoSimulacao.new_value_installment}}% ao ano</p>
-                    </div>
-                </div>
-            </mat-card>
-        </div>
-        <div fxFlex.gt-sm="50" fxFlex.gt-xs="50" fxFlex="100">
-            <mat-card class="card-widget mat-light-blue cards">
-                <div mat-card-widget>
-                    <!--                    <div mat-card-float-icon>-->
-                    <!--                        <mat-icon>attach_money</mat-icon>-->
-                    <!--                    </div>-->
-                    <div class="pl-0">
-                        <p>Com a portabilidade no Safra sua taxa será {{resultadoSimulacao.new_tax}}% ao ano</p>
-                    </div>
-                </div>
+                </mat-card-content>
             </mat-card>
         </div>
     </div>
-
-    <div fxFlex.gt-sm="50" fxFlex.gt-xs="50" fxFlex="100">
-        <p>Fazendo a portabilidade você economizará R${{resultadoSimulacao.saved_value}}%</p>
-    </div>
-
 </div>
-
