--- a/frontend/angular/src/app/session/simulacao/simulacao.component.html
+++ b/frontend/angular/src/app/session/simulacao/simulacao.component.html
@@ -88,7 +88,7 @@
                                                 <!--                        <mat-icon>attach_money</mat-icon>-->
                                                 <!--                    </div>-->
                                                 <div class="pl-0">
-                                                    <p>Hoje sua taxa é de<br>{{(resultadoSimulacao.actual_tax*100).toFixed(2)}}%/ano</p>
+                                                    <p>Hoje sua taxa é de<br>{{resultadoSimulacao.actual_tax}}% ao mês</p>
                                                 </div>
                                             </div>
                                         </mat-card>
@@ -112,7 +112,7 @@
                                                 <!--                        <mat-icon>attach_money</mat-icon>-->
                                                 <!--                    </div>-->
                                                 <div class="pl-0">
-                                                    <p>Com a portabilidade no Safra sua taxa será de {{(resultadoSimulacao.new_tax*100).toFixed(2)}}%/ano</p>
+                                                    <p>Com a portabilidade no Safra sua taxa será de {{resultadoSimulacao.new_tax}}% ao mês</p>
                                                 </div>
                                             </div>
                                         </mat-card>
@@ -121,7 +121,7 @@
                             </div>
                             <div class="pb-1">
                                 <div fxFlex.gt-sm="100" fxFlex.gt-xs="100" fxFlex="100">
-                                    <p>Fazendo a portabilidade você economizará R$%{{resultadoSimulacao.saved_value}}</p>
+                                    <p>Fazendo a portabilidade você economizará R${{resultadoSimulacao.saved_value}}</p>
                                 </div>
                             </div>
                             <button mat-raised-button color="primary" (click)="portabilizar()">Peça agora sua portabilidade</button>
@@ -138,7 +138,7 @@
                                         <p>Número de parcela restantes:</p>
                                     </div>
                                     <div fxFlex.gt-sm="30" fxFlex.gt-xs="30" fxFlex="30" class="text-align-right">
-                                        <p>45</p>
+                                        <p>{{resultadoSimulacao.num_parcelas_restantes}}</p>
                                     </div>
                                     <div fxFlex.gt-sm="70" fxFlex.gt-xs="70" fxFlex="70" class="no-padding">
                                         <p>Valor da parcela atual:</p>
@@ -156,7 +156,7 @@
                                         <p>Valor da nova taxa:</p>
                                     </div>
                                     <div fxFlex.gt-sm="30" fxFlex.gt-xs="30" fxFlex="30" class="text-align-right">
-                                        <p>{{(resultadoSimulacao.new_tax*100).toFixed(2)}}% a.a</p>
+                                        <p>{{resultadoSimulacao.new_tax}}% a.m</p>
                                     </div>
                                     <div fxFlex.gt-sm="70" fxFlex.gt-xs="70" fxFlex="70" class="no-padding">
                                         <p>Custo da portabilidade:</p>
@@ -164,7 +164,6 @@
                                     <div fxFlex.gt-sm="30" fxFlex.gt-xs="30" fxFlex="30" class="text-align-right">
                                         <p>R$400,00</p>
                                     </div>
-
                                 </div>
                             </div>
                         </div>
