--- a/frontend/angular/src/app/session/signin/signin.component.html
+++ b/frontend/angular/src/app/session/signin/signin.component.html
@@ -1,3 +1,16 @@
+<mat-toolbar color="gray">
+    <span class="fill-space"></span>
+    <a [href]="bancoSafraUrl" target="_blank">
+        <img src="/assets/images/SafraPort-Logo2.png" alt="" width="120" height="28"
+             matTooltip="BANCO SAFRA" matTooltipPosition="above">
+    </a>
+    <div fxFlex></div>
+    <a [href]="bancoSafraUrl" target="_blank">
+        <img src="/assets/images/SafraPort-Logo4.png" alt="" width="35" height="35"
+             matTooltip="BANCO SAFRA" matTooltipPosition="above">
+    </a>
+</mat-toolbar>
+
 <div class="session mat-indigo">
   <div class="session-content">
     <div class="session-wrapper">
