Adicionando finalização da simulação

--- a/frontend/angular/src/app/session/simulacao/simulacao.component.html
+++ b/frontend/angular/src/app/session/simulacao/simulacao.component.html
@@ -187,3 +187,32 @@
         </div>
     </div>
 </div>
+
+<div *ngIf='fimSimulacao' class="session mat-indigo">
+    <div class="session-content">
+        <div class="session-wrapper">
+            <mat-card>
+                <mat-card-content>
+                    <div fxLayout="column" fxLayoutAlign="space-around">
+                        <div fxFlex.gt-sm="100" fxFlex.gt-xs="100" fxFlex="100">
+                            <p>Agradecemos o interesse</p>
+                        </div>
+                        <div fxFlex.gt-sm="100" fxFlex.gt-xs="100" fxFlex="100">
+                            <p>Em breve estaremos entrando em contato</p>
+                        </div>
+                        <img src="/assets/images/img2.jpg" alt="" width="100%" height="100%"
+                             matTooltip="BANCO SAFRA" matTooltipPosition="above">
+                        <br>
+                        <button mat-raised-button color="primary" (click)="goBancoSafra()">
+                            Conheça as vantagens de ser um cliente Safra
+                        </button>
+                        <a [href]="bancoSafraUrl" target="_blank">
+                            <img src="/assets/images/SafraPort-Logo1.png" alt="" width="100%" height="100%"
+                                 matTooltip="BANCO SAFRA" matTooltipPosition="above">
+                        </a>
+                    </div>
+                </mat-card-content>
+            </mat-card>
+        </div>
+    </div>
+</div>
